Beginning of Documentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
     <div class="navbar-menu" [class.is-active]="mobileWindowExpanded">
       <div class="navbar-start">
         <!-- <h3 class="is-3 title logo-letters navbar-item"><i>CADDIE</i></h3> -->
+        <!-- <span class="is-6 title logo-letters navbar-item">Version 1.0.0</span> -->
       </div>
       <div class="navbar-end">
         <a routerLink="/" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: true}" class="navbar-item is-hoverable">
@@ -38,10 +39,10 @@
 <!--          <span class="icon"><i class="fa fa-download"></i></span>-->
 <!--          <span>Download</span>-->
 <!--        </a>-->
-        <!-- <a routerLink="/documentation" routerLinkActive="is-active" class="navbar-item is-hoverable">
+        <a routerLink="/documentation" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-book"></i></span>
-          <span>Documentation</span>
-        </a> -->
+          <span>Help</span>
+        </a>
         <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-question"></i></span>
           <span>About</span>
