--- a/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.html
@@ -268,7 +268,7 @@
                                 <p-sortIcon [field]="'score'"></p-sortIcon>
                             </th>
                             <th [pSortableColumn]="'dbdegree'">
-                                DB Degree
+                                Interactome Degree
                                 <p-sortIcon [field]="'dbdegree'"></p-sortIcon>
                             </th>
                             <!--              <th>-->
@@ -469,7 +469,7 @@
                                 <p-sortIcon [field]="'isSeed'"></p-sortIcon>
                             </th>
                             <th [pSortableColumn]="'dbDegree'">
-                                DB Degree
+                                Interactome Degree
                                 <p-sortIcon [field]="'dbDegree'"></p-sortIcon>
                             </th>
                         </tr>
