--- a/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
@@ -137,7 +137,7 @@
             </div>
             <div class="media-content">
               <div class="content">
-                <h6 class="is-6">About harmonic Centrality</h6>
+                <h6 class="is-6">About Harmonic Centrality</h6>
                 <p>
                   Harmonic Centrality is a node centrality measure that ranks the nodes in a network based on the
                   lengths of their shortest paths to all other nodes in the network.
@@ -224,9 +224,9 @@
             </div>
             <div class="media-content">
               <div class="content">
-                <h6 class="is-6">About Closeness Centrality</h6>
+                <h6 class="is-6">About Harmonic Centrality</h6>
                 <p>
-                  Closeness Centrality is a node centrality measure that ranks the nodes in a network based on the
+                  Harmonic Centrality is a node centrality measure that ranks the nodes in a network based on the
                   lengths of their shortest paths to all other nodes in the network.
                 </p>
               </div>
@@ -660,16 +660,16 @@
         <p class="help">
           Automatically filter edges to make network more clear by only showing shorter pathways.
 
-          <a href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view" target="_blank">
-            Check the documentation for more info
-          </a>
+          <!-- <a href="/documentation#documentation-algorithms" target="_blank">
+            Check the documentation for more information
+          </a> -->
 
         </p>
       </div>
 
       <p class="doc-link">
-        <a href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view" target="_blank">
-          Check the documentation for more info
+        <a href="/documentation#documentation-algorithms" target="_blank">
+          Check the documentation for more information
         </a>
       </p>
     </section>
