--- a/src/app/pages/citation-page/citation-page.component.html
+++ b/src/app/pages/citation-page/citation-page.component.html
@@ -4,7 +4,7 @@
     <div class="hero container">
       <div class="column is-8 is-offset-2">
         <div class="container has-text-centered">
-          <img src="assets/caddie_logo.png">
+          <img src="assets/caddie_logo.png" alt="CADDIE logo" title="CADDIE logo" />
           <h2 class="subtitle is-3"> A Coronavirus Explorer </h2>
         </div>
         <div class="content">
