--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,9 +35,10 @@ body {
 
 button.is-example {
     background-color: $secondary;
-    color: white;
-    &:hover{
-      color: white;
+    color: white !important;
+    &:disabled {
+      opacity: 0.5;
+      background-color: $secondary;
     }
 }
 
@@ -325,94 +326,6 @@ body {
 
 .mb-3 {
   margin-bottom: 10px;
-}
-
-.legend {
-  // making legend a little bit smaller
-  transform: scale(0.75);
-  transform-origin: right top;
-
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  &.main {
-    top: 1.5rem;
-    // top: calc(1.5rem + #{$network-header-height});
-    right: 10px;
-  }
-  &.pushed-left {
-    right: calc(10px + #{$legend-width});
-  }
-  td{
-    height: $legend-circle-size;
-    vertical-align: middle !important;
-    padding: 0 !important;
-    .node{
-      background: $network-node-color;
-      border-radius: 50%;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .cancer-node{
-      background: $network-cancer-node-color;
-      border-radius: 50%;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .cancer-node{
-      background: $network-cancer-node-color;
-      border-radius: 50%;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .selected-cancer-node{
-      background: black;
-      border-radius: 50%;
-      border: 5px solid $network-selected-border-color;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .seed-node{
-      background: $network-seed-gene-color;
-      border-radius: 50%;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .seed-cancer-node{
-      background: $network-seed-cancer-gene-color;
-      border-radius: 50%;
-      width: $legend-circle-size;
-      height: $legend-circle-size;
-      display: inline-block;
-    }
-    .approved-drug{
-      background: $network-approved-drug-color;
-      border-radius: $legend-rectangle-radius;
-      width: $legend-rectangle-width;
-      height: $legend-rectangle-height;
-      display: inline-block;
-    }
-    .cancer-drug{
-      width: 0;
-      height: 0;
-      border-left: calc(#{$legend-circle-size} / 2) solid transparent;
-      border-right: calc(#{$legend-circle-size} / 2) solid transparent;
-      border-bottom: $legend-circle-size solid black;
-      display: inline-block;
-    }
-    .non-approved-drug{
-      background: $network-unapproved-drug-color;
-      border-radius: $legend-rectangle-radius;
-      width: $legend-rectangle-width;
-      height: $legend-rectangle-height;
-      display: inline-block;
-    }
-  }
 }
 
 .self-align {
