--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,10 @@
           <span class="icon"><i class="fa fa-book"></i></span>
           <span>Help</span>
         </a>
+        <a routerLink="/python" routerLinkActive="is-active" class="navbar-item is-hoverable">
+          <span class="icon"><i class="fa fa-laptop-code"></i></span>
+          <span>Python</span>
+        </a>
         <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-question"></i></span>
           <span>About</span>
