--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -107,12 +107,12 @@
           <p>
             CADDIE (Cancer Driver Drug Interaction Explorer) is a resource to
             repurpose drugs in cancer based on gene-gene and drug-gene
-            interaction networks. The user has the option to choose between the
+            interaction (GGI and DGI) networks. The user has the option to choose between the
             implemented interaction networks from STRING, BioGRID, DrugBank,
-            ChEMBL and more. CADDIE then exploits the information in selected
-            networks using network algorithms like Trustrank or Degree
+            ChEMBL, and more. CADDIE then exploits the information in selected
+            networks using network algorithms like TrustRank or Degree
             Centrality. The algorithms and the desired parameters are again
-            customizable by the user. Doing this, CADDIE is able to identify
+            customizable by the user. By doing this, CADDIE can identify
             drug repurposing candidates or to search for putative drug targets.
           </p>
           <a id="documentation-workflow"></a>
@@ -134,8 +134,8 @@
             </li>
           </ol>
           <p>
-            Variations of this workflow are of course possible, for example you
-            have the option to upload your own list of
+            Variations of this workflow are of course possible, for example, you
+            have the option to upload your list of
             <a href="documentation#documentation-seed-genes">seed genes</a> or
             to find
             <a href="documentation#documentation-seed-genes">seed genes</a>
@@ -150,7 +150,7 @@
           <p>
             Seed genes are the starting genes for the algorithms. All
             implemented algorithms search in the interaction network for
-            drug-targets or drugs based on their relation the the seed genes.
+            drug-targets or drugs based on their relation the seed genes.
             Therefore, the seed genes are your genes of interest for which
             putative drugs or drug-target candidates should be found for.
           </p>
@@ -170,7 +170,7 @@
             <li>
               <b>Mutli-Steiner Tree:</b> The Multi-level Steiner tree algorithm
               is used to approximate the minimum spanning tree spanned by the
-              seed nodes in reasonable time. The implementation is adopted from
+              seed nodes in a reasonable time. The implementation is adopted from
               <a href="https://arxiv.org/abs/1804.02627" target="_blank"
                 >Ahmed et al.</a
               >
@@ -178,6 +178,10 @@
               user-selected seed nodes, which happen to be central interaction
               partners between the seed nodes, and thus represent favorable
               drug-targets.
+              <ul>
+                <li><i>Number of Steiner trees:</i> Number of computed Steiner trees to approximate minimum spanning tree. A higher number leads to more variations at the cost of a longer runtime.</li>
+                <li><i>Tolerance:</i> Indicates how much the subsequent trees may increase the number of edges.</li>
+              </ul>
             </li>
             <li>
               <a
@@ -200,6 +204,9 @@
               parameter K has to be set by the user which defines the amount of
               permitted intermediate nodes that are neither part of the seed
               nodes nor the common pathway.
+              <ul>
+                <li><i>Additional proteins (k):</i> Number of intermediate nodes that are allowed in between the seed nodes.</li>
+              </ul>
             </li>
             <li>
               <b>TrustRank: </b> TrustRank is based on the same concepts as the
@@ -213,6 +220,9 @@
               the crawler to explore nodes in close proximity or in larger
               portions of the GGI network. In CADDIE, TrustRank is able to find
               putative drug targets as well as drug candidates.
+              <ul>
+                <li><i>Damping Factor:</i> The speed with which the crawler propagates through the network. The larger the factor, the larger the proportion of the network that is considered. </li>
+              </ul>
             </li>
             <li>
               <b>Degree Centrality:</b> Degree centrality measurement is
@@ -318,13 +328,26 @@
             </li>
           </ul>
 
-          <p>All of the algorithms can be adjusted to your needs with parameters. We also provide custom options such as filtering out unapproved or nutraceutical drugs. 
+          <p>All of the algorithms can be adjusted to your needs with parameters. We also provide custom options such as filtering out unapproved or nutraceutical drugs. In general, the following options exist:</p>
+          
+          <ul>
+            <li><i>Result Size: </i>Number of returned results (drug-targets or drugs)</li>
+            <li><i>Maximum Degree: </i>Option to filter out hub genes. if set to > 0, genes with a network degree in the complete gene-drug interaction network above this threshold will be excluded.</li>
+            <li><i>Hub Penalty: </i>Penalize genes with a large degree in the network. The higher the value, the more algorithms will try to avoid genes with a high network degree in the complete gene-drug interaction network.</li>
+            <li><i>Mutation Weights: </i>Select a cancer type to consider its mutations. The algorithm will favor genes with a larger mutation score.</li>
+            <li><i>Expression Weights: </i>Select a cancer type to consider its expressions. The algorithm will favor genes with a higher expression.</li>
+            <li><i>Filter Edges: </i>If set, only the shortest paths to the results (drug-target genes or drugs) will be displayed in the resulting network. Otherwise, all found pathways will be shown.</li>
+            <li><i>Gene Drug Interactions (only drug search): </i>Choose a data resource for the drug-gene interactions. If 'DrugBank" is selected, the options 'Drug Target Actions' will appear.</li>
+            <li><i>Drug Target Actions (only drug search): </i>Only available for gene-drug interaction dataset 'DrugBank'. Filter out drug-gene edges by known effect.</li>
+            <li><i>Nutraceutical Drugs (only drug search): </i>If set, nutraceutical drugs will be excluded.</li>
+            <li><i>Only ATC class L (only drug search): </i>If set, only drugs that are listed in the <a href="https://www.whocc.no/atc_ddd_index/?code=L&showdescription=yes" target="_blank">ATC class L Antineoplastic and immunomodulating agents</a> by the <a href="https://www.who.int/" target="_blank">World Health Organization (WHO)</a>.</li>
+          </ul>
 
           <a id="documentation-explorer"></a>
           <h4 class="title is-4">Explorer</h4>
           <p>
             The Explorer is the main part of the application. It allows you to
-            explore the interactome of you cancer type or cancer driver genes of
+            explore the interactome of your cancer type or cancer driver genes of
             interest. Most importantly, it gives you a variety of information
             like comorbidities or expression values to help you select seed
             genes for your drug or drug-target search.
@@ -332,9 +355,9 @@
           <a id="documentation-left-menu"></a>
           <h4 class="title is-5">Left Menu</h4>
           <p>
-            On the left side you can find a menu bar which gives you the options
+            On the left side, you can find a menu bar that gives you the options
             to select your cancer type or gene interaction resource of interest.
-            You will receive a short overview over your cancer type of interest.
+            You will receive a short overview of your cancer type of interest.
             After selecting your
             <a href="documentation#documentation-seed-genes">seed genes</a>, the
             left menu allows you to start analysis tasks (max. 3 at a time). The
