update documentation typo

--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -378,14 +378,14 @@
             On the right side of the explorer is the gene-interaction network.
             It contains all cancer driver genes of your selected cancer type,
             forming a minimal spanning tree. It is supplemented by genes found
-            by the multiple steiner tree algorithm in order to make the minimal
-            spanning tree possible. The network gives you an overview over the
+            by the Multiple Steiner Tree algorithm in order to make the minimal
+            spanning tree possible. The network gives you an overview of the
             relations of the cancer driver genes to each other and lets you
             select
             <a href="documentation#documentation-seed-genes">seed genes</a> for
             the drug-target or drug search by double-clicking the nodes. A
             single click on a node opens a window at the top of the left menu
-            with detail information about the drug or gene such as comorbidities
+            with detailed information about the drug or gene such as comorbidities
             or the node degree in the complete human drug-gene interaction
             network.
           </p>
@@ -397,7 +397,7 @@
             />
           </div>
           <p>
-            Below the network you can find various functions that help you to
+            Below the network, you can find various functions that help you to
             manipulate the network to find genes of your interest. The
             expression of genes in different tissues (data from GTEx) as well as
             in different cancer types (data from TCGA) can be highlighted and
@@ -415,14 +415,14 @@
           <a id="documentation-analysis"></a>
           <h4 class="title is-5">Analysis View</h4>
           <p>
-            THe analysis view opens when you click on a finished task in the
+            The analysis view opens when you click on a finished task in the
             left menu in the explorer. The analysis view will open on top of the
-            network, and is divided in four parts. One part is the result
-            network, which offers the same functions as the initial gene-network
+            network and is divided into four parts. One part is the resulting
+            network, which offers the same functions as the initial gene network
             but here it displays all
             <a href="documentation#documentation-seed-genes">seed genes</a> in
             combination with the found genes and/or drugs and allows you to
-            inspect the relations from the seeds to the results. Your can also
+            inspect the relations from the seeds to the results. You can also
             look at your results in a table format, where additional information
             to each of the genes or drugs is displayed. Here you can sort the
             nodes to get a better overview and download the tables for further
@@ -470,7 +470,7 @@
             <a href="/documentation#documentation_drug_interaction_lookup"
               >drug interaction lookup</a
             >
-            with the difference that that it allows you to search for genes
+            with the difference that it allows you to search for genes
             instead of drugs. The list of drug interactions will be shown along
             with detailed drug information. In addition, you will receive a list
             of all known cancer types related to your gene of interest.
