scrollable to python package page

--- a/src/app/python-page/python-page.component.html
+++ b/src/app/python-page/python-page.component.html
@@ -1,4 +1,4 @@
-<div class="scroll">
+<div class="scrollable">
   <div class="content">
     <div class="hero container">
       <div class="column is-8 is-offset-2">
